--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,8 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h1 style="color:rgb(0, 153, 255)"><b>Hello Kubernetes Fans!</b></h1>
-        <img src="images/docker.png"
+        <img src="images/docker.png">
+         <p>Updated The Site</p>
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
