--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="http://34.74.186.58:8080/css/normalize.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="http://34.74.186.58:8080/css/skeleton.css" rel="stylesheet" type="text/css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -36,7 +36,6 @@
       <div class="one-half column" style="margin-top: 10%">
         <h1 style="color:rgb(0, 153, 255)"><b>Hello Kubernetes Fans!</b></h1>
         <img src="images/docker.png">
-         <p>Updated The Site</p>
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
