--- a/html/index.html
+++ b/html/index.html
@@ -5,27 +5,36 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Hello Whale</title>
+  <title>Hello World!</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Helvetica, Arial, sans-serif; 
+    }
 
+    h1 {
+      font-size: 2.5em;
+    }
+  </style>
+  
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="http://34.74.186.58:8080/css/normalize.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="http://34.74.186.58:8080/css/skeleton.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./css/normalize.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./css/skeleton.css" rel="stylesheet" type="text/css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
-
+  
 </head>
 <body>
 
