--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
         <h1 style="color:rgb(0, 153, 255)"><b>Hello Kubernetes Fans!</b></h1>
+        <p>Updates to the Home Page.</p>
         <img src="images/docker.png">
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
       </div>
