--- a/html/index.html
+++ b/html/index.html
@@ -47,6 +47,10 @@
   
         <img src="images/docker.png">
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
+
+        <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
+
+        <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
   </div>
