--- a/html/index.html
+++ b/html/index.html
@@ -46,6 +46,7 @@
         <h1 style="color:rgb(0, 153, 255)"><b>Hello Kubernetes Fans!</b></h1>
   
         <img src="images/docker.png">
+        <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>      
       </div>
     </div>
